Update new (version 2601) (#5)
## What's new?

- Remove Windows 10 Enterprise G as the primary KMS host, instead move to Windows Server 2025 (https://github.com/tfslabs/license-manager/commit/314cf248bda7b95de69e40d15f0c8a9531f2c3aa)
- Add new Visual Studio 2026 `pkeyconfig` and product keys (https://github.com/tfslabs/license-manager/commit/089f4ba68134448eb5a955017a523b0a19406b92)
- Added Visual Studio 2015 and 2017 product keys (https://github.com/tfslabs/license-manager/commit/1881e396a2369dc8786db36f438a7ee739f9b0a0)
- Clarification in KMS activation error & KMS external library import (https://github.com/tfslabs/license-manager/commit/ea86fba654fc1f30c4ac32f2131188361f1aeac5)
- Fix for [display overflow (reported by Carlos Detweiller)](https://forums.mydigitallife.net/threads/emulated-kms-servers-on-non-windows-platforms.50234/page-112#post-1887837) (https://github.com/tfslabs/license-manager/commit/979c88ff122098b0ab9f48d11b64e4401a7f7251)

## Release date

Only all issues between the developers and engineers have been resolved satisfactorily.

---------

Co-authored-by: Vo Luu Tuong Anh <anhvlt.2006@outlook.com>
Co-authored-by: VLTA of @TheFlightSims <176574466+anhvlt-2k6@users.noreply.github.com>

--- a/ConnectForm.xaml
+++ b/ConnectForm.xaml
@@ -2,8 +2,10 @@
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:lm="clr-namespace:HGM.Hotbird64.LicenseManager"
-        Title="Connect to Another Computer" Height="Auto" Width="350" SizeToContent="Height"
-        >
+        Title="Connect to Another Computer" 
+        Height="Auto"
+        Width="350"
+        SizeToContent="Height">
     <StackPanel Name="TopElement">
         <TextBlock Margin="5,5,5,5" TextWrapping="Wrap">
             Specifiy a remote computer using DNS name, or IP Address
@@ -24,8 +26,8 @@
                 <ColumnDefinition Width="60*"/>
             </Grid.ColumnDefinitions>
 
-            <Button Margin="5,5,5,5" IsDefault="True" Click="button_Connect_Click">Connect</Button>
-            <Button Name="ButtonConnectLocal" Margin="5,5,5,5" Grid.Column="1" Click="button_Local_Click">Use Local Computer</Button>
+            <Button Margin="5,5,5,5" IsDefault="True" Click="Button_Connect_Click">Connect</Button>
+            <Button Name="ButtonConnectLocal" Margin="5,5,5,5" Grid.Column="1" Click="Button_Local_Click">Use Local Computer</Button>
             <Button Margin="5,5,5,5" IsCancel="True" Grid.Column="2">Cancel</Button>
         </Grid>
     </StackPanel>
