--- a/InstallKmsKeys.xaml
+++ b/InstallKmsKeys.xaml
@@ -1,5 +1,10 @@
-﻿<local:ScalableWindow x:Class="HGM.Hotbird64.LicenseManager.InstallKmsKeys" xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation" xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:d="http://schemas.microsoft.com/expression/blend/2008" xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" xmlns:local="clr-namespace:HGM.Hotbird64.LicenseManager"
+﻿<local:ScalableWindow 
+    x:Class="HGM.Hotbird64.LicenseManager.InstallKmsKeys" 
+    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation" 
+    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
+    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
+    xmlns:local="clr-namespace:HGM.Hotbird64.LicenseManager"
     mc:Ignorable="d" Title="Install Multiple GVLKs" SizeToContent="WidthAndHeight" ResizeMode="NoResize">
   <local:ScalableWindow.Resources>
 
